Add toggle listener into BindingListeners.kt

--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -51,6 +51,7 @@
             tools:text="Human" />
 
         <ToggleButton
+            checkListener="@{(isChecked) -> viewModel.updateFavoriteState(isChecked)}"
             android:checked="@{viewModel.isFavorite}"
             android:id="@+id/toggleButton"
             style="@style/FavoriteButtonStyle"
